# newron-sdk

./: .gitignore  README.md  mkgendocs.yml  pyproject.toml  setup.py
.github/workflows/: docs.yml  master.yml
dev/: install-common-deps.sh  install-commpm-deps.sh  run-python-flavor-tests.sh  run-python-tests.sh  setup-ssh.sh
dev/copycat/: Dockerfile  entrypoint.sh
docs/: next.config.js  package.json
docs/pages/: index.mdx  text.mdx
examples/: FastAIExample.ipynb  GluonExample.ipynb  H20Example.ipynb  KerasExample.ipynb  LightGBMExample.ipynb  pmdarimaExample.ipynb  prophetExample.ipynb  pytorchExample.ipynb  sklearnAutolog.ipynb  sklearnElasticNet.ipynb  spacyExample.ipynb
newron/: NColors.py  __init__.py  artifacts.py  auth.py  catboost.py  cli.py  colored.py  config_path_utils.py  diviner.py  entities.py  exceptions.py  fastai.py  gluon.py  h20.py  introspect.py  keras.py  lightgbm.py  models.py  onnx.py  pmdarima.py  prophet.py  pytorch.py  sklearn.py  spacy.py  spark.py  tensorflow.py  token_store.py  tracking.py  utils.py  version.py
newron/pyspark.ml/: __init__.py  log_model_allowlist.txt
newron/utils/: __init__.py  environment.py
plugin/: request_header_provider.py  setup.py
plugin/plugin/: request_header_provider.py
tests/: conftest.py  helper_functions.py  test_flavors.py  test_keras_autolog.py
tests/autologging/: fixtures.py  test_autologging_utils.py
tests/catboost/: test_catboost_model_export.py
tests/keras/: test_keras_autolog.py  test_pyfunc_model_works_with_all_input_types.py
tests/pytorch/: iris.py  (+2 more)
todo/: docs.yml
(+9 files in other folders)
