[project]
name = "newron"
version = "0.1.5"
description = "NewronAI: Machine Learning, Made Simple. Client SDK for Newron AI"
authors = [{ name = "Newron AI", email = "hello@newron.ai" }]
readme = "README.md"
requires-python = ">=3.7"
dependencies = ["mlflow"]
keywords = ['mlops', "experiment", "tracking", "deployments", "mlflow"]

[build-system]
requires = ["setuptools", "setuptools-scm", "wheel"]
build-backend = "setuptools.build_meta"

[project.urls]
"GitHub" = "https://github.com/NewronAI/NewronSDK"
"Home Page" = "https://newron.ai"
"Documentation" = "https://docs.newron.ai"
